src-tauri/src/snapshots/agaric_lib__backlink_query__tests__snapshot_backlink_query_empty.snap
---
source: src/backlink_query.rs
expression: resp
---
items: []
next_cursor: "[CURSOR]"
has_more: false
total_count: 0
filtered_count: 0
